k8s/applications/services/media/plex/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
spec:
  ports:
  - name: http
    port: 32400
    targetPort: http
  selector:
    app: plex
  ipFamilyPolicy: SingleStack
  ipFamilies:
    # gdi Plex, doesn't support home families properly unless you do this
    - "IPv4"
